...
        }

        return ProductPage(
            products: [
                Product(
                    id: 1,
                    title: "Essence Mascara",
                    price: 9.99,
                    thumbnail: "",
                    category: "beauty"
                )
            ],
            total: 1,
...
